# QtFaceRecognitionTerminal

./: .cmake-format.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  FaceScope.pro  README.md  audio_test.cpp  build.sh  facescope.pro  main.cpp  qrcode-test.cpp  resource.qrc  server.cpp  smoke-test.cpp  temperature_task.cpp  user.env.sample
asserts/: beep.aac  facescope_en.qm  fail.aac  success.aac  temperature_normal.aac
asserts/en/: get_closer.aac  pass.aac  recognition_failed.aac  recognition_succeed.aac  report_mask.aac  take_off_mask.aac  take_on_mask.aac  temperature_abnormal.aac  temperature_normal.aac
asserts/jp/: get_closer.aac  pass.aac  recognition_failed.aac  recognition_succeed.aac  take_off_mask.aac  take_on_mask.aac  temperature_abnormal.aac  temperature_normal.aac
asserts/zh-CN/: get_closer.aac  pass.aac  recognition_failed.aac  recognition_succeed.aac  report_mask.aac  take_off_mask.aac  take_on_mask.aac  temperature_abnormal.aac  temperature_normal.aac
cmake/: GetGitRevisionDescription.cmake  download.cmake  himix200.toolchain.cmake
config/: 【名商】config.json
core/: detection_float.h  image_package.h  pingpangbuffer.h
core/app/: alive_task.cpp  alive_task.h  camera_reader.cpp  camera_reader.h  detect_task.cpp  detect_task.h  recognize_task.cpp  recognize_task.h
i18n/: Readme.md  face_terminal_en.ts  face_terminal_jp.ts  face_terminal_zh-CN.ts  face_terminal_zh_CN.ts  facescope_en.ts  translations.qrc
package/: pack.py
rootfs/usr/script/: hifb-Qt-enable.sh  sample.sh
scripts/: pack.sh  start-upgrade.sh  upgrade-app.sh
src/: static_config.hpp.in
src/app/: CMakeLists.txt  README.md  alive_task.cpp  alive_task.h  ambient_temp_task.cpp  ambient_temp_task.hpp  anti_spoofing_task.cpp  anti_spoofing_task.hpp  antispoof_task.cpp  antispoof_task.hpp  audio_task.cpp  audio_task.hpp  camera_reader.cpp  camera_reader.h  camera_reader.hpp  co2_task.cpp  co2_task.hpp  config.cpp  config.hpp  detect_task.cpp  detect_task.h  detect_task.hpp  face_timer.cpp  face_timer.hpp  gpio_task.cpp  gpio_task.hpp  led_task.cpp  led_task.hpp  object_temp_task.cpp  object_temp_task.hpp  qrcode_task.cpp  qrcode_task.hpp  readcard_task.cpp  readcard_task.hpp  reader_task.cpp  reader_task.hpp  recognize_task.cpp  recognize_task.h  recognize_task.hpp  record_task.cpp  (+5 more)
src/app/temperature/: dashu_task.cpp  dashu_task.hpp  haiman_task.cpp  haiman_task.hpp  otpa_task.cpp  otpa_task.hpp  random_task.cpp  random_task.hpp  temperature_task.cpp  temperature_task.hpp
src/app/temperature_app/: matrix_temperature_app.cpp  matrix_temperature_app.hpp  single_temperature_app.cpp  single_temperature_app.hpp  temperature_app.cpp  temperature_app.hpp
src/lib/: CMakeLists.txt  README.md  config.cpp  config.hpp  detection_data.cpp  detection_data.hpp  detection_float.h  image_package.cpp  image_package.h  image_package.hpp  logger.cpp  logger.hpp  memory_pool.hpp  person.h  person.hpp  pingpang_buffer.cpp  pingpang_buffer.h  pingpang_buffer.hpp  pingpangbuffer.cpp  pingpangbuffer.h  quface_common.hpp  recognize_data.cpp  recognize_data.hpp  system.cpp  system.hpp
src/lib/irtemp/: otpa16.cpp  otpa16.hpp
src/server/: CMakeLists.txt  base64.cpp  curl_util.cpp  curl_util.hpp  face_service.cpp  face_service.hpp  http_server.cpp  openssl-compat.c  openssl-compat.h  openssl_util.cpp  openssl_util.hpp  person.cpp  person.hpp  thread_pool.hpp
src/service/: CMakeLists.txt  README.md  base64.hpp  event.hpp  face_server.cpp  face_server.hpp  face_service.cpp  face_service.hpp  http_server.cpp  http_server.hpp  person.cpp  person.hpp  person_service.cpp  person_service.hpp
src/ui/: CMakeLists.txt  README.md  boot_ui.cpp  boot_ui.hpp  co2_tip_widget.cpp  co2_tip_widget.hpp  detect_tip_widget.cpp  detect_tip_widget.hpp  detecttipwidget.cpp  detecttipwidget.h  face_box_widget.cpp  face_box_widget.hpp  heatmap_widget.cpp  heatmap_widget.hpp  isp_hist_widget.cpp  isp_hist_widget.hpp  outline_widget.cpp  outline_widget.hpp  recognize_tip_widget.cpp  recognize_tip_widget.hpp  recognizetipwidget.cpp  recognizetipwidget.h  screen_saver_widget.cpp  screen_saver_widget.hpp  status_banner.cpp  status_banner.hpp  temperature_tip_widget.cpp  temperature_tip_widget.hpp  video_player.cpp  video_player.hpp  videoframewidget.cpp  videoframewidget.h  videoplayer.cpp  videoplayer.h
src/ui/touch/: digit_key_widget.cpp  digit_key_widget.hpp  menu_key_widget.cpp  menu_key_widget.hpp  qrcode_widget.cpp  qrcode_widget.hpp  touch_widget.cpp  touch_widget.hpp
toolchain/: baidu_pan.txt
ui/: detecttipwidget.cpp  detecttipwidget.h  recognizetipwidget.cpp  recognizetipwidget.h  videoplayer.cpp  videoplayer.h
